--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -44,19 +44,19 @@
 		</init-param>
 	</filter>
 	<!-- configure loginFilter -->
-	<filter>
+<!-- 	<filter>
 		<filter-name>LoginFilter</filter-name>
 		<filter-class>com.myblog.filter.LoginFilter</filter-class>
-	</filter>
+	</filter> -->
 	
 	<filter-mapping>
 		<filter-name>encoding</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<filter-mapping>
+<!-- 	<filter-mapping>
 		<filter-name>LoginFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 	
 	<!-- 配置Spring的OpenSessionInView过滤器解决懒加载 -->
 	<filter>
