--- a/.settings/com.genuitec.eclipse.core.prefs
+++ b/.settings/com.genuitec.eclipse.core.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-validator.Checked=WebRoot/js/5.js,WebRoot/resource/js/Loginjs.js,WebRoot/js/Loginjs.js,WebRoot/resource/js/5.js
+validator.Checked=WebRoot/js/5.js,WebRoot/resource/js/Loginjs.js,WebRoot/js/Loginjs.js,WebRoot/resource/js/5.js,WebRoot/resource/webgl-clouds/three.min.js,WebRoot/resource/js/jquery.min.js
 validator.Unchecked=
